{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 29,
  "lineage": "065ee478-a8e7-7402-c515-5ffe9b6f0324",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250311",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gke-autopilot-project-453523/zones/us-central1-a/disks/bastion-host"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-03-12T18:45:28.177-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/gke-autopilot-project-453523/zones/us-central1-a/instances/bastion-host",
            "instance_id": "6173690001310582361",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "5YCmm9X4qR0=",
            "name": "bastion-host",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.29.68.179",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gke-autopilot-project-453523/global/networks/gke-dev-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gke-autopilot-project-453523/regions/us-central1/subnetworks/gke-subnet",
                "subnetwork_project": "gke-autopilot-project-453523"
              }
            ],
            "project": "gke-autopilot-project-453523",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-autopilot-project-453523/zones/us-central1-a/instances/bastion-host",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion"
            ],
            "tags_fingerprint": "NfTTNVh6sLU=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "bastion_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-12T18:32:55.159-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gke-autopilot-project-453523/global/firewalls/allow-bastion-ssh",
            "log_config": [],
            "name": "allow-bastion-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/gke-autopilot-project-453523/global/networks/gke-dev-vpc",
            "priority": 1000,
            "project": "gke-autopilot-project-453523",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-autopilot-project-453523/global/firewalls/allow-bastion-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal_communication",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-03-12T18:32:55.220-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gke-autopilot-project-453523/global/firewalls/allow-internal-communication",
            "log_config": [],
            "name": "allow-internal-communication",
            "network": "https://www.googleapis.com/compute/v1/projects/gke-autopilot-project-453523/global/networks/gke-dev-vpc",
            "priority": 1000,
            "project": "gke-autopilot-project-453523",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-autopilot-project-453523/global/firewalls/allow-internal-communication",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gke-autopilot-project-453523/global/networks/gke-dev-vpc",
            "mtu": 0,
            "name": "gke-dev-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "7318723991751854932",
            "numeric_id": "7318723991751854932",
            "project": "gke-autopilot-project-453523",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-autopilot-project-453523/global/networks/gke-dev-vpc"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-12T18:32:55.844-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/gke-autopilot-project-453523/regions/us-central1/routers/cloud-router",
            "name": "cloud-router",
            "network": "https://www.googleapis.com/compute/v1/projects/gke-autopilot-project-453523/global/networks/gke-dev-vpc",
            "project": "gke-autopilot-project-453523",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-autopilot-project-453523/regions/us-central1/routers/cloud-router"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "gke-autopilot-project-453523/us-central1/cloud-router/cloud-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "cloud-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "gke-autopilot-project-453523",
            "region": "us-central1",
            "router": "cloud-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.router"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-12T18:32:55.955-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/gke-autopilot-project-453523/regions/us-central1/subnetworks/gke-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "gke-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/gke-autopilot-project-453523/global/networks/gke-dev-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gke-autopilot-project-453523",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.0.2.0/24",
                "range_name": "pods-range"
              },
              {
                "ip_cidr_range": "10.0.3.0/24",
                "range_name": "services-range"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-autopilot-project-453523/regions/us-central1/subnetworks/gke-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": -1182823640
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}